2005-01-10  Christophe Fergeau  <teuf@gnome.org>

	* src/xdgmimeglob.c: (_xdg_glob_hash_lookup_file_name): make previous
	commit actually work...

2005-01-10  Christophe Fergeau  <teuf@gnome.org>

	* src/xdgmimeglob.c: (_xdg_glob_hash_lookup_file_name): don't get
	confused by multiple dots in filenames when doing extension matching

2004-12-13  Marco Pesenti Gritti  <marco@gnome.org>

	* src/xdgmime.h:

	 wrap new API in XDG_ENTRY()

2004-12-13  Marco Pesenti Gritti  <marco@gnome.org>

	* src/xdgmimeglob.c: (_xdg_glob_hash_lookup_file_name):

	Do not assume the filename is UTF8. We just need to look
	for the dot which is ASCII.

2004-12-09  Marco Pesenti Gritti  <marco@gnome.org>

	* src/xdgmimeint.h:

	Remove spacings I introduced by mistake

2004-12-09  Marco Pesenti Gritti  <marco@gnome.org>

	* src/xdgmimealias.c: (_xdg_mime_alias_read_from_file):
	* src/xdgmimeint.c: (_xdg_ucs4_to_lower):
	* src/xdgmimeint.h:
	* src/xdgmimeparent.c: (_xdg_mime_parent_read_from_file):

	Check in Mariano Suárez-Alvarez <msuarezalvarez@arnet.com.ar> patch
	for GNOME bug #160838.

2004-12-09  Marco Pesenti Gritti  <marco@gnome.org>

	* src/xdgmimeglob.c: (_xdg_glob_hash_node_lookup_file_name):
	* src/xdgmimeint.c: (_xdg_ucs4_to_lower):
	* src/xdgmimeint.h:

	Follow the freedesktop spec about case sensitiveness. Fix #732

2004-12-08  Christophe Fergeau  <teuf@gnome.org>

	* src/xdgmimeglob.c: (_xdg_mime_glob_read_from_file): backing out
	"fix" for bug #1048 since it frees memory that shouldn't be freed.

2004-12-08  Marco Pesenti Gritti  <marco@gnome.org>

	* src/xdgmimemagic.c: (_xdg_mime_magic_read_from_file):

	Check that fread succeeded reading all chars. Fix #1049

2004-12-08  Marco Pesenti Gritti  <marco@gnome.org>

	* src/xdgmime.c:
	* src/xdgmimealias.c:
	* src/xdgmimeglob.c:
	* src/xdgmimeint.c:
	* src/xdgmimemagic.c:
	* src/xdgmimeparent.c:

	Include config.h. Fix #913

2004-12-08  Marco Pesenti Gritti  <marco@gnome.org>
