@@ -1,3 +1,8 @@
+Mon Mar 21 13:16:12 2005  Jonathan Blandford  <jrb@redhat.com>
+
+	* src/xdgmime.c (xdg_mime_shutdown): fix from  Axel Liljencrantz
+	<f97-ali@nada.kth.se> to free parent_list in shutdown.
+
 2005-01-10  Christophe Fergeau  <teuf@gnome.org>
 
 	* src/xdgmimeglob.c: (_xdg_glob_hash_lookup_file_name): make previous
